--- a/pet-hotel-frontend/src/App.css
+++ b/pet-hotel-frontend/src/App.css
@@ -37,3 +37,19 @@
     transform: translateY(0px);
   }
 }
+
+table {
+  border: solid black 2px;
+  width: 80%
+}
+
+th, td {
+  padding: 15px;
+  border-spacing: 0;
+  text-align: left;
+  border-bottom: 1px solid #ddd
+}
+
+tr:nth-child(even) {
+  background-color: #f5f5f5;
+}
